--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="alchoholdetect"
+        android:label="Safe Drive Guardian"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -46,5 +46,9 @@
         <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
         <!-- For Android 10 (API level 29) and above -->
         <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
+        <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+        <uses-permission android:name="android.permission.VIBRATE" />
+        <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
 </manifest>
